--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
       href="https://cdn.jsdelivr.net/npm/pretendard@1.3.6/dist/web/static/pretendard.css"
     />
     
+     <!-- Cloudinary Widget -->
+     <script src="https://widget.cloudinary.com/v2.0/global/all.js"></script>
+
     <title>React App</title>
   </head>
   <body>
