[feat] 카카오 로그인 추가

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
      <script src="https://widget.cloudinary.com/v2.0/global/all.js"></script>
 
     <title>React App</title>
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
